--- a/css/agency.css
+++ b/css/agency.css
@@ -6,7 +6,7 @@
 body {
   overflow-x: hidden;
   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-image: url('../img/red-skin-bg.jpg');
+  background-image: url('../img/congruent_outline.png');
 }
 .text-muted {
   color: #777777;
