--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -6,7 +6,7 @@
 		<div class="input-group">
 			<input type="text" name="q" ng-model="search" class="form-control" placeholder="Search...">
 			<span class="input-group-btn">
-				<button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
+				<button type="submit" name="search" id="search-btn" class="btn btn-flat" ng-click="clear_search()"><i class="fa fa-times"></i>
 				</button>
 			</span>
 		</div>
