--- a/views/favorites.html
+++ b/views/favorites.html
@@ -1,28 +1,23 @@
 
 
 <div class="row">
-	<div class="col-md-2 ">		
-		<div class="league_box_date">
-			<span class="match_day_caption">Match day:</span>
-			<span class="match_day">{{league.league_detail.matchday}}</span>
-		</div>		
-	</div>
+	
 	<div class="col-md-10">
-		<h2 class="section_title ">{{league.league_detail.leagueCaption}} </h2>
+		<h2 class="section_title ">Favorites</h2>
 	</div>
 </div>
 <br><br>
 
 <!-- Processing div -->
 
-	<div class="col-lg-12 " ng-show="league.processing == true">
+	<div class="col-lg-12 " ng-show="favs.processing == true">
 		<div class='uil-ripple-css processing_div' style='transform:scale(0.6);'><div></div><div></div></div>
 	</div>
 
 <!-- End Processing div -->
 
 <div class="row" ng-if="league.groups">
-	<div class="col-md-6"  ng-repeat="group in league.groups">
+	<div class="col-md-6"  ng-repeat="team in fav_teams">
 		<div class="box box-success" >
 			<div class="box-content">
 				<div class="box-body">
@@ -36,19 +31,18 @@
 							<th>GA</th>
 							<th>GD</th>
 							<th>Group</th>
-							<th></th>
 						</thead>
 						<tbody >
 							<tr ng-repeat="team in group">
 								<td>{{team.rank}}</td>
-								<td><a href=""></a><img src="{{team.crestURI}}" alt="{{team.team}}_flag" width="30"> {{team.team}}</td>
+								<td><a href=""></a><img src="{{team.crestURI}}" alt="{{team.team}}_flag" width="30"> {{team.teamName}}</td>
 								<td>{{team.points}}</td>
 								<td>{{team.playedGames}}</td>
 								<td>{{team.goals}}</td>
 								<td>{{team.goalsAgainst}}</td>
 								<td>{{team.goalDifference}}</td>
 								<td>{{team.group}}</td>
-								<td><a class="btn btn-success" href="./#/team/fixtures/{{team.teamId}}">Matches</a</td>
+
 							</tr>						
 						</tbody>
 					</table>
@@ -58,7 +52,7 @@
 	</div>
 </div>
 
-<div class="row" ng-if="league.teams">
+<div class="row" >
 	<div class="col-md-12"  >
 		<div class="box box-success" >
 			<div class="box-content">
@@ -77,12 +71,11 @@
 							<th><a ng-click="sortType = 'goals'; sortReverse = !sortReverse">GF</a></th>
 							<th><a ng-click="sortType = 'goalsAgainst'; sortReverse = !sortReverse">GA</a></th>
 							<th><a ng-click="sortType = 'goalDifference'; sortReverse = !sortReverse">GD</a></th>
-							<th></th>
 						</tr>
 						</thead>
 						<tbody >
 							
-							<tr ng-repeat="team in league.teams | filter : search | orderBy:sortType:sortReverse">
+							<tr ng-repeat="team in favs.fav_teams | filter : search | orderBy:sortType:sortReverse">
 								<td>{{team.position}}</td>
 								<td>
 									<a href="javascript:void(0)" ng-click="league.open(team)"><img src="{{team.crestURI}}" alt="{{team.teamName}}_flag" width="30"> {{team.teamName}}</a>
@@ -96,6 +89,7 @@
 								<td>{{team.goalsAgainst}}</td>
 								<td>{{team.goalDifference}}</td>
 								<td><a class="btn btn-success" href="./#/team/fixtures/{{team.team_id}}">Matches</a</td>
+								<td><button class="btn btn-danger" ng-click="unfav(team)"><i class="fa fa-trash" aria-hidden="true"></i></button></td>
 							</tr>						
 						</tbody>
 					</table>
