--- a/css/custom.css
+++ b/css/custom.css
@@ -1,9 +1,10 @@
 .section_title{
 	color: #fff;
-	text-shadow: 2px 2px #7f0000;
 	display: inline;
 }
 
+
+/* League details */
 .intro-text{
 	-webkit-stroke-width: 8.3px;
    -webkit-stroke-color: #FFFFFF;
@@ -23,16 +24,15 @@
     min-height: 96px;
     margin: 0 0 4px 0;
     cursor: pointer;
-    border: 2px solid #7f0000;
-    background-color: #7f0000;
-    color:white;
+    border: 2px solid #ccc;
+    background-color: #ffffff;
+    color:#484848;
 	padding-bottom: 10px;
 	transition: all 0.3s;    
 }
 .league_box:hover{	
-    
-    border: 2px solid #5d3f3f;
-    background-color: #690606;
+    color:white;
+    background-color: #6d6d6d;
     
 	    
 }
@@ -43,7 +43,7 @@
     height: 100px;
     padding: 2px 10px;
     margin-right: 10px;
-	background: url('../img/red-news-date-bg.jpg') 0 0 no-repeat #7f0000;
+	background: url('../img/red-news-date-bg.png') 0 0 no-repeat ;
 }
 
 .match_day_caption{
@@ -51,7 +51,7 @@
     text-transform: uppercase;
     text-align: center;
     font-weight: bold;
-    padding-top: 17px;
+    padding-top: 10px;
     color: white;
 }
 .match_day{
@@ -59,7 +59,7 @@
     text-transform: uppercase;
     text-align: center;
     font-weight: bold;
-    padding-top: 10px;
+    padding-top: 5px;
     font-size: 24px;
     font-weight: bold;
     color: white;
@@ -79,9 +79,16 @@
 .processing_div{
 	left: 40%;
 }
+
+/* end League details */
+
+/* Team Modal */
 .modal-title{
 	font-size: 5rem;
 	margin-left: 1rem;
+}
+.sub-tittle{
+	font-size: 1.2rem
 }
 .cell-default{
 	background-color: #00667f;
@@ -141,4 +148,85 @@
 .cell-block-i{	
 	border-right: 1px solid #868686;
 }
+.accent{
+	font-size: 1.8rem;
+	color: #355a15;
+}
 
+/* End Team Modal */
+
+
+/* Matches*/
+
+.match_box{
+	position: relative;
+  border-radius: 3px;
+  background: #ffffff;
+  border-top: 3px solid #d2d6de;
+  margin-bottom: 20px;
+  width: 100%;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  min-height: 265px;
+}
+.match_header{	
+	text-align: center;	
+	border-bottom: 1px solid #ccc;
+}
+.match_date{
+	font-size: 3rem;
+	color: #1b5f02;
+}
+.match_time {
+	font-size: 1.5rem;
+	color: #4e4e4e;
+}
+.match_body{
+	overflow: auto
+}
+.away_team{
+	color:#5f5e02;
+}
+.home_team{
+	font-weight: bold;
+	color:#134573;
+}
+.match_left{
+	border-right: 1px solid #ccc;	
+	
+}
+.match_right {
+	
+}
+.match_right, .match_left{
+	width: 50%;
+	float: left;
+	padding: 10px;
+	text-align: center;
+	min-height: 117px;
+	-webkit-transition: all 0.3s; /*Safari & Chrome*/
+   transition: all 0.3s;
+   -moz-transition: all 0.3s; /* Firefox 4 */
+   -o-transition: all 0.3s; /* Opera */
+
+}
+.match_right:hover, .match_left:hover{
+	background-color: #efefef;
+	
+}
+.team_goals{
+	font-size: 4rem;
+}
+.match_footer{
+	text-align: center;
+	padding: 5px 10px;
+	font-size: 2rem;
+	border-top: 1px solid #ccc;
+}
+.match_status_finished{
+	color:green;
+}
+.match_status_timed{
+	color:red;
+}
+
+/* Matches*/
