--- a/css/agency.css
+++ b/css/agency.css
@@ -227,7 +227,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/bg.jpg');
+  ba/*ckground-image: url('../img/bg.jpg');*/
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -237,7 +237,7 @@ header {
   -o-background-size: cover;
   text-align: center;
   color: white;
-  height: 230px;
+  height: 100px;
 }
 header .intro-text {
   padding-top: 100px;
