--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,7 +1,6 @@
-
-
+<!-- Title and search bar -->
 <div class="row">
-<h2 class="section_title">Dashboard</h2>
+	<h2 class="section_title">Dashboard</h2>
 	<div class="col-md-4 col-md-offset-8">
 		<div class="input-group">
 			<input type="text" name="q" ng-model="search" class="form-control" placeholder="Search...">
@@ -15,31 +14,27 @@
 <br><br>
 
 <!-- Processing div -->
-
-	<div class="col-lg-12" ng-show="dashboard.processing == true">
-		<div class='uil-ripple-css processing_div' style='transform:scale(0.6);'><div></div><div></div></div>
-	</div>
-
+<div class="col-lg-12" ng-show="dashboard.processing == true">
+	<div class='uil-ripple-css processing_div' style='transform:scale(0.6);'><div></div><div></div></div>
+</div>
 <!-- End Processing div -->
 
+<!-- Cells with leagues -->
 <div class="col-sm-6" ng-repeat="league in dashboard.leagues | filter:search">
-<a href="#/league/{{league.id}}">
-	<div class="league_box" >
-	<div class="league_box_date">
-		<span class="match_day_caption">Match day:</span>
-		<span class="match_day">{{league.currentMatchday}}</span>
-	</div>
-		
-		<div class="league_box_detail">
-			<h4 class="box-title">{{league.caption}}</h4>
-			<h5>Number of teams: {{league.numberOfTeams}}</h5>			
-			
-            <span class="description">Number of Match days: {{league.numberOfMatchdays}}</span>
-            <br>
-			<span class="description">Total Games: {{league.numberOfGames}}</span>
-            
-		</div>		
-	</div>
-</a>
+	<a href="#/league/{{league.id}}">
+		<div class="league_box" >
+			<div class="league_box_date">
+				<span class="match_day_caption">Match day:</span>
+				<span class="match_day">{{league.currentMatchday}}</span>
+				</div>			
+			<div class="league_box_detail">
+				<h4 class="box-title">{{league.caption}}</h4>
+				<h5>Number of teams: {{league.numberOfTeams}}</h5>
+				<span class="description">Number of Match days: {{league.numberOfMatchdays}}</span>
+				<br>
+				<span class="description">Total Games: {{league.numberOfGames}}</span>
+			</div>		
+		</div>
+	</a>
 </div>
 </div>
